<resources>
    <string name="app_name">WeatherReporter</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_addcity">Add City</string>
    <string name="menu_about">About</string>
    <string name="details"><u><i>Details</i></u></string>
    <string name="x">X</string>
    <string name="imperial">Imperial</string>
    <string name="metric">Metric</string>
    <string name="enter_city_name">Enter City Name</string>
    <string name="metric_imperial">Metric/Imperial</string>
    <string name="coordinates">Coordinates</string>
    <string name="weather">Weather</string>
    <string name="description">Description</string>
    <string name="temperature">Temperature</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="minimum_temperature">Minimum Temperature</string>
    <string name="maximum_temperature">Maximum Temperature</string>
    <string name="title_activity_maps">Map</string>
</resources>